// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a disabled input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      disabled=""
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a full width input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c3 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c3[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c3:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c3::-webkit-input-placeholder {
  opacity: 0.6;
}

.c3::-moz-placeholder {
  opacity: 0.6;
}

.c3:-ms-input-placeholder {
  opacity: 0.6;
}

.c3::placeholder {
  opacity: 0.6;
}

.c3 {
  width: 100%;
}

.c0 {
  width: 100%;
}

<div
  class="c0 c1"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c2 c1"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c3 c4"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c6 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c6[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c6:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c6::-webkit-input-placeholder {
  opacity: 0.6;
}

.c6::-moz-placeholder {
  opacity: 0.6;
}

.c6:-ms-input-placeholder {
  opacity: 0.6;
}

.c6::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
  >
    <input
      aria-invalid="false"
      aria-required="true"
      class="c6 c7"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (after) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child):not(:last-child),
.c5 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c5 > *:first-child,
.c5 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child,
.c5 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c5 > * {
  border-radius: 4px;
}

.c5 input:focus,
.c5 select:focus {
  z-index: 1;
  position: relative;
}

.c5 > *:first-child input,
.c5 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child input,
.c5 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:not(:first-child):not(:last-child) > input,
.c5 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
    role="group"
  >
    <div
      class="c6 c0"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c7 c8"
        id="username"
        type="text"
        value=""
      />
    </div>
    <div>
      test
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (before) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child):not(:last-child),
.c5 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c5 > *:first-child,
.c5 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child,
.c5 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c5 > * {
  border-radius: 4px;
}

.c5 input:focus,
.c5 select:focus {
  z-index: 1;
  position: relative;
}

.c5 > *:first-child input,
.c5 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child input,
.c5 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:not(:first-child):not(:last-child) > input,
.c5 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
    role="group"
  >
    <div>
      test
    </div>
    <div
      class="c6 c0"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c7 c8"
        id="username"
        type="text"
        value=""
      />
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (vertical) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 > *:not(:first-child):not(:last-child),
.c5 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-top-width: 0;
}

.c5 > *:first-child,
.c5 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:last-child,
.c5 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-top-width: 0;
  border-top-right-radius: 0;
}

.c5 > * {
  border-radius: 4px;
}

.c5 input:focus,
.c5 select:focus {
  z-index: 1;
  position: relative;
}

.c5 > *:first-child input,
.c5 > *:first-child select {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:last-child input,
.c5 > *:last-child select {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:not(:first-child):not(:last-child) > input,
.c5 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
    role="group"
  >
    <div
      class="c6 c0"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c7 c8"
        id="username"
        type="text"
        value=""
      />
    </div>
    <div>
      test
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a default value 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value="Awesome value"
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c10 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c5 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <span
    class="c5 c6 c0"
  >
    Required for your fannypack
  </span>
  <div
    class="c7 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c6 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c6[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c6:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c6::-webkit-input-placeholder {
  opacity: 0.6;
}

.c6::-moz-placeholder {
  opacity: 0.6;
}

.c6:-ms-input-placeholder {
  opacity: 0.6;
}

.c6::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c9 .c10 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c8 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c6 c7"
      id="username"
      type="text"
      value=""
    />
  </div>
  <span
    class="c8 c9 c0"
  >
    Must be awesome
  </span>
</div>
`;

exports[`renders correctly for an input field with a placeholder 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      placeholder="Awesome placeholder"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input with a after component 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c3.c3.c3 {
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c4 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  padding-right: 2.3em;
}

.c9 .c5 {
  top: 0.15em;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <div
      class="c2 c3"
      style="right: 0px; z-index: 3;"
    >
      <svg
        class="c4 c5 c6 c0"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <title>
          Search
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input with a before component 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c3.c3.c3 {
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c4 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  padding-left: 2.3em;
}

.c9 .c5 {
  top: 0.15em;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <div
      class="c2 c3"
      style="z-index: 3;"
    >
      <svg
        class="c4 c5 c6 c0"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <title>
          Search
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c10 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c5 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
    <span
      class="c5 c6 c0"
    >
      OPTIONAL
    </span>
  </div>
  <div />
  <div
    class="c7 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for an input field with size large 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  font-size: 1.5rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for an input field with size medium 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  font-size: 1.25rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for an input field with size small 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  font-size: 0.8rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 10px;
  height: 10px;
  top: 10px;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state danger 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #c9444d;
  box-shadow: #c9444d 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="true"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state primary 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state success 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #2c8453;
  box-shadow: #2c8453 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state warning 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #f2a100;
  box-shadow: #f2a100 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type date 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="date"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type email 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="email"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type number 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="number"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type password 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="password"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type search 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="search"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type tel 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="tel"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type time 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="time"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type url 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="url"
      value=""
    />
  </div>
  <div />
</div>
`;
